lib/ch341_lib.h

typedef enum _EEPROM_TYPE {
	ID_24C01,
	ID_24C02,
	ID_24C04,
	ID_24C08,
	ID_24C16,
	ID_24C32,
	ID_24C64,
	ID_24C128,
	ID_24C256,
	ID_24C512,
	ID_24C1024,
	ID_24C2048,
	ID_24C4096
} EEPROM_TYPE;
typedef enum _CHIP_TYPE {
	CHIP_CH341 = 0,
	CHIP_CH347
} CHIP_TYPE;
typedef enum {
	TYPE_TTY = 0,
	TYPE_HID,
	TYPE_VCP,
} FUNCTYPE;
/**
 * CH34XOpenDevice - open device
 * @pathname: device path in /dev directory
 *
 * The function return positive file descriptor if successful, others if fail.
 */
extern int CH34xOpenDevice(const char *pathname);
/**
 * CH34XCloseDevice - close device
 * @fd: file descriptor of device
 *
 * The function return true if successful, false if fail.
 */
extern bool CH34xCloseDevice(int fd);
/**
 * CH34x_GetDriverVersion - get vendor driver version
 * @fd: file descriptor of device
 * @Drv_Version: pointer to version string
 *
 * The function return true if successful, false if fail.
 */
extern bool CH34x_GetDriverVersion(int fd, unsigned char *Drv_Version);
/**
 * CH34x_GetChipVersion - get chip version
 * @fd: file descriptor of device
 * @Version: pointer to version
 *
 * The function return true if successful, false if fail.
 */
extern bool CH34x_GetChipVersion(int fd, unsigned char *Version);
/**
 * CH34x_GetChipType - get chip type
 * @fd: file descriptor of device
 * @Version: pointer to type
 *
 * The function return true if successful, false if fail.
 */
extern bool CH34x_GetChipType(int fd, unsigned char *ChipType);
/**
 * CH34X_GetDeviceID - get device vid and pid
 * @fd: file descriptor of device
 * @id: pointer to store id which contains vid and pid
 *
 * The function return true if successful, false if fail.
 */
extern bool CH34X_GetDeviceID(int fd, uint32_t *id);
/**
 * CH34xSetParaMode - set chip parrallel work mode
 * @fd: file descriptor of device
 * @Mode: work mode, 0/1->EPP mode, 2->MEM mode
 *
 * The function return true if successful, false if fail.
 */
extern bool CH34xSetParaMode(int fd, uint8_t Mode);
/**
 * CH34xInitParallel - initial chip parrallel work mode
 * @fd: file descriptor of device
 * @Mode: work mode, 0/1->EPP mode, 2->MEM mode
 *
 * The function return true if successful, false if fail.
 */
extern bool CH34xInitParallel(int fd, uint8_t Mode);
/**
 * CH34xEppRead - read data or addr in parrallel EPP mode
 * @fd: file descriptor of device
 * @oBuffer: pointer to read buffer
 * @ioLength: read length
 * @PipeMode: 0->read pipe0 data, 1->read pipe1 addr
 *
 * The function return read 0 if successful, others if fail.
 */
extern int CH34xEppRead(int fd, uint8_t *oBuffer, uint32_t ioLength, uint8_t PipeMode);