lib/bindings.rs

/* automatically generated by rust-bindgen 0.70.1 */

pub const true_: u32 = 1;
pub const false_: u32 = 0;
pub const __bool_true_false_are_defined: u32 = 1;
pub const _STDINT_H: u32 = 1;
pub const _FEATURES_H: u32 = 1;
pub const _DEFAULT_SOURCE: u32 = 1;
pub const __GLIBC_USE_ISOC2X: u32 = 0;
pub const __USE_ISOC11: u32 = 1;
pub const __USE_ISOC99: u32 = 1;
pub const __USE_ISOC95: u32 = 1;
pub const __USE_POSIX_IMPLICITLY: u32 = 1;
pub const _POSIX_SOURCE: u32 = 1;
pub const _POSIX_C_SOURCE: u32 = 200809;
pub const __USE_POSIX: u32 = 1;
pub const __USE_POSIX2: u32 = 1;
pub const __USE_POSIX199309: u32 = 1;
pub const __USE_POSIX199506: u32 = 1;
pub const __USE_XOPEN2K: u32 = 1;
pub const __USE_XOPEN2K8: u32 = 1;
pub const _ATFILE_SOURCE: u32 = 1;
pub const __WORDSIZE: u32 = 64;
pub const __WORDSIZE_TIME64_COMPAT32: u32 = 1;
pub const __SYSCALL_WORDSIZE: u32 = 64;
pub const __TIMESIZE: u32 = 64;
pub const __USE_MISC: u32 = 1;
pub const __USE_ATFILE: u32 = 1;
pub const __USE_FORTIFY_LEVEL: u32 = 0;
pub const __GLIBC_USE_DEPRECATED_GETS: u32 = 0;
pub const __GLIBC_USE_DEPRECATED_SCANF: u32 = 0;
pub const _STDC_PREDEF_H: u32 = 1;
pub const __STDC_IEC_559__: u32 = 1;
pub const __STDC_IEC_60559_BFP__: u32 = 201404;
pub const __STDC_IEC_559_COMPLEX__: u32 = 1;
pub const __STDC_IEC_60559_COMPLEX__: u32 = 201404;
pub const __STDC_ISO_10646__: u32 = 201706;
pub const __GNU_LIBRARY__: u32 = 6;
pub const __GLIBC__: u32 = 2;
pub const __GLIBC_MINOR__: u32 = 35;
pub const _SYS_CDEFS_H: u32 = 1;
pub const __glibc_c99_flexarr_available: u32 = 1;
pub const __LDOUBLE_REDIRECTS_TO_FLOAT128_ABI: u32 = 0;
pub const __HAVE_GENERIC_SELECTION: u32 = 1;
pub const __GLIBC_USE_LIB_EXT2: u32 = 0;
pub const __GLIBC_USE_IEC_60559_BFP_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_BFP_EXT_C2X: u32 = 0;
pub const __GLIBC_USE_IEC_60559_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_FUNCS_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_FUNCS_EXT_C2X: u32 = 0;
pub const __GLIBC_USE_IEC_60559_TYPES_EXT: u32 = 0;
pub const _BITS_TYPES_H: u32 = 1;
pub const _BITS_TYPESIZES_H: u32 = 1;
pub const __OFF_T_MATCHES_OFF64_T: u32 = 1;
pub const __INO_T_MATCHES_INO64_T: u32 = 1;
pub const __RLIM_T_MATCHES_RLIM64_T: u32 = 1;
pub const __STATFS_MATCHES_STATFS64: u32 = 1;
pub const __KERNEL_OLD_TIMEVAL_MATCHES_TIMEVAL64: u32 = 1;
pub const __FD_SETSIZE: u32 = 1024;
pub const _BITS_TIME64_H: u32 = 1;
pub const _BITS_WCHAR_H: u32 = 1;
pub const _BITS_STDINT_INTN_H: u32 = 1;
pub const _BITS_STDINT_UINTN_H: u32 = 1;
pub const INT8_MIN: i32 = -128;
pub const INT16_MIN: i32 = -32768;
pub const INT32_MIN: i32 = -2147483648;
pub const INT8_MAX: u32 = 127;
pub const INT16_MAX: u32 = 32767;
pub const INT32_MAX: u32 = 2147483647;
pub const UINT8_MAX: u32 = 255;
pub const UINT16_MAX: u32 = 65535;
pub const UINT32_MAX: u32 = 4294967295;
pub const INT_LEAST8_MIN: i32 = -128;
pub const INT_LEAST16_MIN: i32 = -32768;
pub const INT_LEAST32_MIN: i32 = -2147483648;
pub const INT_LEAST8_MAX: u32 = 127;
pub const INT_LEAST16_MAX: u32 = 32767;
pub const INT_LEAST32_MAX: u32 = 2147483647;
pub const UINT_LEAST8_MAX: u32 = 255;
pub const UINT_LEAST16_MAX: u32 = 65535;
pub const UINT_LEAST32_MAX: u32 = 4294967295;
pub const INT_FAST8_MIN: i32 = -128;
pub const INT_FAST16_MIN: i64 = -9223372036854775808;
pub const INT_FAST32_MIN: i64 = -9223372036854775808;
pub const INT_FAST8_MAX: u32 = 127;
pub const INT_FAST16_MAX: u64 = 9223372036854775807;
pub const INT_FAST32_MAX: u64 = 9223372036854775807;
pub const UINT_FAST8_MAX: u32 = 255;
pub const UINT_FAST16_MAX: i32 = -1;
pub const UINT_FAST32_MAX: i32 = -1;
pub const INTPTR_MIN: i64 = -9223372036854775808;
pub const INTPTR_MAX: u64 = 9223372036854775807;
pub const UINTPTR_MAX: i32 = -1;
pub const PTRDIFF_MIN: i64 = -9223372036854775808;
pub const PTRDIFF_MAX: u64 = 9223372036854775807;
pub const SIG_ATOMIC_MIN: i32 = -2147483648;
pub const SIG_ATOMIC_MAX: u32 = 2147483647;
pub const SIZE_MAX: i32 = -1;
pub const WINT_MIN: u32 = 0;
pub const WINT_MAX: u32 = 4294967295;
pub type __u_char = ::std::os::raw::c_uchar;
pub type __u_short = ::std::os::raw::c_ushort;
pub type __u_int = ::std::os::raw::c_uint;
pub type __u_long = ::std::os::raw::c_ulong;
pub type __int8_t = ::std::os::raw::c_schar;
pub type __uint8_t = ::std::os::raw::c_uchar;
pub type __int16_t = ::std::os::raw::c_short;
pub type __uint16_t = ::std::os::raw::c_ushort;
pub type __int32_t = ::std::os::raw::c_int;
pub type __uint32_t = ::std::os::raw::c_uint;
pub type __int64_t = ::std::os::raw::c_long;
pub type __uint64_t = ::std::os::raw::c_ulong;
pub type __int_least8_t = __int8_t;
pub type __uint_least8_t = __uint8_t;
pub type __int_least16_t = __int16_t;
pub type __uint_least16_t = __uint16_t;
pub type __int_least32_t = __int32_t;
pub type __uint_least32_t = __uint32_t;
pub type __int_least64_t = __int64_t;
pub type __uint_least64_t = __uint64_t;
pub type __quad_t = ::std::os::raw::c_long;
pub type __u_quad_t = ::std::os::raw::c_ulong;
pub type __intmax_t = ::std::os::raw::c_long;
pub type __uintmax_t = ::std::os::raw::c_ulong;
pub type __dev_t = ::std::os::raw::c_ulong;
pub type __uid_t = ::std::os::raw::c_uint;
pub type __gid_t = ::std::os::raw::c_uint;
pub type __ino_t = ::std::os::raw::c_ulong;
pub type __ino64_t = ::std::os::raw::c_ulong;
pub type __mode_t = ::std::os::raw::c_uint;
pub type __nlink_t = ::std::os::raw::c_ulong;
pub type __off_t = ::std::os::raw::c_long;
pub type __off64_t = ::std::os::raw::c_long;
pub type __pid_t = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __fsid_t {
    pub __val: [::std::os::raw::c_int; 2usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of __fsid_t"][::std::mem::size_of::<__fsid_t>() - 8usize];
    ["Alignment of __fsid_t"][::std::mem::align_of::<__fsid_t>() - 4usize];
    ["Offset of field: __fsid_t::__val"][::std::mem::offset_of!(__fsid_t, __val) - 0usize];
};
pub type __clock_t = ::std::os::raw::c_long;
pub type __rlim_t = ::std::os::raw::c_ulong;
pub type __rlim64_t = ::std::os::raw::c_ulong;
pub type __id_t = ::std::os::raw::c_uint;
pub type __time_t = ::std::os::raw::c_long;
pub type __useconds_t = ::std::os::raw::c_uint;
pub type __suseconds_t = ::std::os::raw::c_long;
pub type __suseconds64_t = ::std::os::raw::c_long;
pub type __daddr_t = ::std::os::raw::c_int;
pub type __key_t = ::std::os::raw::c_int;
pub type __clockid_t = ::std::os::raw::c_int;
pub type __timer_t = *mut ::std::os::raw::c_void;
pub type __blksize_t = ::std::os::raw::c_long;
pub type __blkcnt_t = ::std::os::raw::c_long;
pub type __blkcnt64_t = ::std::os::raw::c_long;
pub type __fsblkcnt_t = ::std::os::raw::c_ulong;
pub type __fsblkcnt64_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt64_t = ::std::os::raw::c_ulong;
pub type __fsword_t = ::std::os::raw::c_long;
pub type __ssize_t = ::std::os::raw::c_long;
pub type __syscall_slong_t = ::std::os::raw::c_long;
pub type __syscall_ulong_t = ::std::os::raw::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut ::std::os::raw::c_char;
pub type __intptr_t = ::std::os::raw::c_long;
pub type __socklen_t = ::std::os::raw::c_uint;
pub type __sig_atomic_t = ::std::os::raw::c_int;
pub type int_least8_t = __int_least8_t;
pub type int_least16_t = __int_least16_t;
pub type int_least32_t = __int_least32_t;
pub type int_least64_t = __int_least64_t;
pub type uint_least8_t = __uint_least8_t;
pub type uint_least16_t = __uint_least16_t;
pub type uint_least32_t = __uint_least32_t;
pub type uint_least64_t = __uint_least64_t;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_long;
pub type int_fast32_t = ::std::os::raw::c_long;
pub type int_fast64_t = ::std::os::raw::c_long;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_ulong;
pub type uint_fast32_t = ::std::os::raw::c_ulong;
pub type uint_fast64_t = ::std::os::raw::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub const _EEPROM_TYPE_ID_24C01: _EEPROM_TYPE = 0;
pub const _EEPROM_TYPE_ID_24C02: _EEPROM_TYPE = 1;
pub const _EEPROM_TYPE_ID_24C04: _EEPROM_TYPE = 2;
pub const _EEPROM_TYPE_ID_24C08: _EEPROM_TYPE = 3;
pub const _EEPROM_TYPE_ID_24C16: _EEPROM_TYPE = 4;
pub const _EEPROM_TYPE_ID_24C32: _EEPROM_TYPE = 5;
pub const _EEPROM_TYPE_ID_24C64: _EEPROM_TYPE = 6;
pub const _EEPROM_TYPE_ID_24C128: _EEPROM_TYPE = 7;
pub const _EEPROM_TYPE_ID_24C256: _EEPROM_TYPE = 8;
pub const _EEPROM_TYPE_ID_24C512: _EEPROM_TYPE = 9;
pub const _EEPROM_TYPE_ID_24C1024: _EEPROM_TYPE = 10;
pub const _EEPROM_TYPE_ID_24C2048: _EEPROM_TYPE = 11;
pub const _EEPROM_TYPE_ID_24C4096: _EEPROM_TYPE = 12;
pub type _EEPROM_TYPE = ::std::os::raw::c_uint;
pub use self::_EEPROM_TYPE as EEPROM_TYPE;
pub const _CHIP_TYPE_CHIP_CH341: _CHIP_TYPE = 0;
pub const _CHIP_TYPE_CHIP_CH347: _CHIP_TYPE = 1;
pub type _CHIP_TYPE = ::std::os::raw::c_uint;
pub use self::_CHIP_TYPE as CHIP_TYPE;
pub const FUNCTYPE_TYPE_TTY: FUNCTYPE = 0;
pub const FUNCTYPE_TYPE_HID: FUNCTYPE = 1;
pub const FUNCTYPE_TYPE_VCP: FUNCTYPE = 2;
pub type FUNCTYPE = ::std::os::raw::c_uint;
extern "C" {
    #[doc = " CH34XOpenDevice - open device\n @pathname: device path in /dev directory\n\n The function return positive file descriptor if successful, others if fail."]
    pub fn CH34xOpenDevice(pathname: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " CH34XCloseDevice - close device\n @fd: file descriptor of device\n\n The function return true if successful, false if fail."]
    pub fn CH34xCloseDevice(fd: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[doc = " CH34x_GetDriverVersion - get vendor driver version\n @fd: file descriptor of device\n @Drv_Version: pointer to version string\n\n The function return true if successful, false if fail."]
    pub fn CH34x_GetDriverVersion(
        fd: ::std::os::raw::c_int,
        Drv_Version: *mut ::std::os::raw::c_uchar,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34x_GetChipVersion - get chip version\n @fd: file descriptor of device\n @Version: pointer to version\n\n The function return true if successful, false if fail."]
    pub fn CH34x_GetChipVersion(
        fd: ::std::os::raw::c_int,
        Version: *mut ::std::os::raw::c_uchar,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34x_GetChipType - get chip type\n @fd: file descriptor of device\n @Version: pointer to type\n\n The function return true if successful, false if fail."]
    pub fn CH34x_GetChipType(
        fd: ::std::os::raw::c_int,
        ChipType: *mut ::std::os::raw::c_uchar,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34X_GetDeviceID - get device vid and pid\n @fd: file descriptor of device\n @id: pointer to store id which contains vid and pid\n\n The function return true if successful, false if fail."]
    pub fn CH34X_GetDeviceID(fd: ::std::os::raw::c_int, id: *mut u32) -> bool;
}
extern "C" {
    #[doc = " CH34xSetParaMode - set chip parrallel work mode\n @fd: file descriptor of device\n @Mode: work mode, 0/1->EPP mode, 2->MEM mode\n\n The function return true if successful, false if fail."]
    pub fn CH34xSetParaMode(fd: ::std::os::raw::c_int, Mode: u8) -> bool;
}
extern "C" {
    #[doc = " CH34xInitParallel - initial chip parrallel work mode\n @fd: file descriptor of device\n @Mode: work mode, 0/1->EPP mode, 2->MEM mode\n\n The function return true if successful, false if fail."]
    pub fn CH34xInitParallel(fd: ::std::os::raw::c_int, Mode: u8) -> bool;
}
extern "C" {
    #[doc = " CH34xEppRead - read data or addr in parrallel EPP mode\n @fd: file descriptor of device\n @oBuffer: pointer to read buffer\n @ioLength: read length\n @PipeMode: 0->read pipe0 data, 1->read pipe1 addr\n\n The function return read 0 if successful, others if fail."]
    pub fn CH34xEppRead(
        fd: ::std::os::raw::c_int,
        oBuffer: *mut u8,
        ioLength: u32,
        PipeMode: u8,
    ) -> ::std::os::raw::c_int;
}
